提交初始化实例

--- a/src/main/webapp/static_business_app/index.html
+++ b/src/main/webapp/static_business_app/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <meta name="description" content="">
-    <title>龙眼 1.0</title>
-    <meta name="HandheldFriendly" content="True">
-    <meta http-equiv="Cache-Control" content="no-transform" /> 
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes" /> -->
-    <%--<meta name="viewport"--%>
-          <%--content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">--%>
-    <meta name="viewport" content="width=device-width,initial-scale=0.5, minimum-scale=0.5, maximum-scale=1.0, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+    <meta charset="utf-8" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="yes" name="apple-touch-fullscreen" />
+    <meta content="telephone=no,email=no" name="format-detection" />
+    <!--    <meta content="maximum-dpr=2" name="flexible" />-->
+    <meta content="modeName=750-12" name="grid" />
+    <!--<script src="build/flexible_css.debug.js"></script>
+    <script src="build/flexible.debug.js"></script>
+    <script src="build/makegrid.debug.js"></script>-->
+    <title>B端APP</title>
     <SCRIPT LANGUAGE="javascript">
         window.resource = {
             image: '/img'
@@ -21,23 +19,19 @@
     <!-- <link href="static/css/app.uncompressed.css" rel="stylesheet">-->
 
     <!-- build:css static/build/css/server_user-1.0.0.min-->
+    <link rel="stylesheet" href="css/iconfont.css">
+    <link rel="stylesheet" href="css/index.css">
 
-    <link rel="stylesheet"
-          href="/css/main.css">
-    <link rel="stylesheet"
-          href="/css/demo.css">
-    <link rel="stylesheet"
-          href="/css/iconfont.css">
     <!-- endbuild -->
     <!-- build:js static/build/js/server_user-1.0.0.min -->
-    <script src="nvwa-loader-1.0.0.js"
+    <script src="nvwa-loader-1.7.0.js"
             api=""
             baseUrl="js"
             skin=""
             debug="true"
             lang="zh_CN"
             jsonp="true"
-            preload="lib/bootstrap/3.3.1/bootstrap.min,jquery.ui.widget"></script>
+            preload="lib/bootstrap/3.3.1/bootstrap.min,jquery.ui.widget,lib/flexible"></script>
     <!-- endbuild -->
     <style type="text/css">
         @font-face {
@@ -67,6 +61,7 @@
 <div style="position: fixed;top: 0px;right: 0px;bottom: 0px;left: 0px;background-color: #777;">
     <span>系统载入中......</span>
 </div>
+<div class="line">212312</div>
 
 
 </body>
